Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26293

Sidebar view menu selection doesn't contain keyboard shortcuts

XMLWordPrintable

    • 843790329521d3b890d0bf08a65e49c9f99be3e0 (qt-creator/tqtc-qt-creator/master)

      One can switch to <File System> view by using the default Alt+Y, Alt+F keyboard shortcut (Meta+Y, Meta+F on macOS).

      The Projects mode keyboard switch is Alt+X (Meta+X).

      These keyboard shortcuts are not  displayed in the menu selection, as seen in the attached screenshot.

        For Gerrit Dashboard: QTCREATORBUG-26293
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            cadam Cristian Adam
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes