Core: Show keyboard sequence for navigation widgets

Fixes: QTCREATORBUG-26293
Change-Id: Ifc1df96b063365ee5b27684cb4efb33be2608582
Reviewed-by: Cristian Adam <cristian.adam@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>